--- a/doc/tesis/bib/Bibliografia.bib
+++ b/doc/tesis/bib/Bibliografia.bib
@@ -16,4 +16,32 @@
 	year = { },
 	pages = {16--19}
 }
-	
+
+@article{seniorepoc,
+  title={EPOC-alypse Mind Controlled Car},
+  author={Senior Design, I}
+}
+
+@article{raza2012ssvep,
+  title={SSVEP based EEG Interface for Google Street View Navigation},
+  author={Raza, Asim},
+  year={2012}
+}
+
+@inproceedings{2009ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009}
+}
+
+@inproceedings{kranz2010things,
+  title={Things that twitter: social networks and the internet of things},
+  author={Kranz, Matthias and Roalter, Luis and Michahelles, Florian},
+  booktitle={What can the Internet of Things do for the Citizen (CIoT) Workshop at The Eighth International Conference on Pervasive Computing (Pervasive 2010)},
+  pages={1--10},
+  year={2010}
+}
