--- a/doc/tesis/text/Antecedentes.tex
+++ b/doc/tesis/text/Antecedentes.tex
@@ -1,6 +1,9 @@
 \chapter*{Antecedentes}
-En Interfaz Cerebro ? Computadora para el Control de un Cursor Basado en Ondas Cerebrales\cite{ref2} se plantea una interfaz que permita la comunicación entre el usuario y la computadora, haciendo uso de sus ondas cerebrales, para el control de un cursor en pantalla mediante comandos obtenidos de las lecturas de un amplificador de ondas cerebrales.
+\markboth{\MakeUppercase{Antecedentes}}{}
+\addcontentsline{toc}{chapter}{Antecedentes}
 
-ROS
-ROS (Robot Operating System) provee librerías y herramientas para ayudar a los desarrolladores de software a crear aplicaciones para robots. ROS provee abstracción de hardware, controladores de dispositivos, librerías, herramientas de visualización, comunicación por mensajes, administración de paquetes y más[4]. ROS es utilizado en el software desarrollado para establecer una comunicación por mensajes en tiempo real. 
-
+\indent En Interfaz Cerebro - Computadora para el Control de un Cursor Basado en Ondas Cerebrales\cite{ref2} se plantea una interfaz que permita la comunicación entre el usuario y la computadora, haciendo uso de sus ondas cerebrales, para el control de un cursor en pantalla mediante comandos obtenidos de las lecturas de un amplificador de ondas cerebrales.
+\\ \indent En EPOC-alypse Mind Controlled Car\cite{seniorepoc} plantean la construcción de de un carro de control remoto que es controlado por la mente usando el Emotiv EPOC. El proyecto fue desarrollado utilizando el SDK oficial del Emotiv EPOC.
+\\ \indent En SSVEP based EEG Interface for Google Street View Navigation\cite{raza2012ssvep} analizan los sistemas BCI y su aplicación en el mundo real. También desarrollan  un prototipo interactivo que pueda ser controlado en un ambiente controlado para demostrar el funcionamiento de los sistemas BCI. Para el desarrollo decidieron utilizar el software libre OpenViBE para la adquisición y procesamiento de las señales.
+\\ \indent En ROS: an open-source Robot Operating System\cite{2009ros} se explica el uso de la plataforma ROS para el desarrollo de aplicaciones de robótica. ROS provee una capa de comunicación estructura basada en Peer-to-peer, basado en herramientas, además es multilenguaje, ligero, gratuito y de código abierto.
+\\ \indent En Things that twitter: social networks and the internet of things\cite{kranz2010things} utilizan ROS aplicado en las redes sociales. ROS permite intercambiar información por medio de servicios con mensaje de request y response definidos. La información es intercambiada por una arquitectura publish/suscribe donde los procesos permiten que sus datos estén disponibles para que otros procesos puedan utilizarlos.
