--- a/doc/tesis/text/Objetivos.tex
+++ b/doc/tesis/text/Objetivos.tex
@@ -11,7 +11,9 @@ Crear un software libre capaz de interpretar las señales de un EEG para que pued
 \markboth{\MakeUppercase{Objetivos Particulares}}{}
 \addcontentsline{toc}{section}{Objetivos Particulares}
 
-?	Establecer un canal de comunicación entre el software y el EEG.
-?	Obtener datos numéricos a partir de las señales obtenidas.
-?	Tomar esos datos en tiempo real y graficarlos en una relación frecuencia-tiempo.
-?	Establecer un canal de salida para enviar los datos interpretados.
+\begin{itemize}
+\item Establecer un canal de comunicación entre el software y el EEG.
+\item Obtener datos numéricos a partir de las señales obtenidas.
+\item Tomar esos datos en tiempo real y graficarlos en una relación frecuencia-tiempo.
+\item Establecer un canal de salida para enviar los datos interpretados.
+\end{itemize}
