--- a/doc/tesis/Tesis.tex
+++ b/doc/tesis/Tesis.tex
@@ -13,7 +13,7 @@
 \setcounter{tocdepth}{3}
 \pagenumbering{roman}
 
-\title{Desarrollo de un Software Libre para la interpretación de ondas cerebrales}
+\title{Desarrollo de un Software Libre para la lectura de señales enviadas por un lector de ondas cerebrales}
 \author{Carlos Antonio Bulnes Domínguez}
 
 \begin{document}
@@ -36,6 +36,9 @@
 \input{text/Hipotesis}\newpage\cleardoublepage
 \input{text/Objetivos}\newpage\cleardoublepage
 \input{text/Antecedentes}\newpage\cleardoublepage
+%Diseño
+%Desarrollo
+%Consluciones y trabajo futuro
 
 %\listofalgorithms
 %\listoffigures
