--- a/doc/tesis/text/Antecedentes.tex
+++ b/doc/tesis/text/Antecedentes.tex
@@ -7,3 +7,5 @@
 \\ \indent En SSVEP based EEG Interface for Google Street View Navigation\cite{raza2012ssvep} analizan los sistemas BCI y su aplicación en el mundo real. También desarrollan  un prototipo interactivo que pueda ser controlado en un ambiente controlado para demostrar el funcionamiento de los sistemas BCI. Para el desarrollo decidieron utilizar el software libre OpenViBE para la adquisición y procesamiento de las señales.
 \\ \indent En ROS: an open-source Robot Operating System\cite{2009ros} se explica el uso de la plataforma ROS para el desarrollo de aplicaciones de robótica. ROS provee una capa de comunicación estructura basada en Peer-to-peer, basado en herramientas, además es multilenguaje, ligero, gratuito y de código abierto.
 \\ \indent En Things that twitter: social networks and the internet of things\cite{kranz2010things} utilizan ROS aplicado en las redes sociales. ROS permite intercambiar información por medio de servicios con mensaje de request y response definidos. La información es intercambiada por una arquitectura publish/suscribe donde los procesos permiten que sus datos estén disponibles para que otros procesos puedan utilizarlos.
+
+% DEscribir emokit, describir EPOC relacion con la UV, ROS,  trabajos previos 
