Cambios en Tesis

--- a/doc/tesis/Tesis.tex
+++ b/doc/tesis/Tesis.tex
@@ -5,6 +5,7 @@
 %Options: Sonny, Lenny, Glenn, Conny, Rejne, Bjarne, Bjornstrup
 \usepackage[Lenny]{fncychap}
 \usepackage{fullpage}
+\usepackage{verbatim} 
 %\usepackage{algorithm}
 
 %\bibliographystyle{plain}
@@ -33,12 +34,12 @@
 
 \input{text/Introduccion}\newpage\cleardoublepage
 \input{text/Justificacion}\newpage\cleardoublepage
-\input{text/Hipotesis}\newpage\cleardoublepage
+%\input{text/Hipotesis}\newpage\cleardoublepage
 \input{text/Objetivos}\newpage\cleardoublepage
 \input{text/Antecedentes}\newpage\cleardoublepage
-%Diseño
-%Desarrollo
-%Consluciones y trabajo futuro
+\input{text/Diseno}\newpage\cleardoublepage
+\input{text/Desarrollo}\newpage\cleardoublepage
+\input{text/Conclusiones}\newpage\cleardoublepage
 
 %\listofalgorithms
 %\listoffigures
