--- a/doc/tesis/text/Hipotesis.tex
+++ b/doc/tesis/text/Hipotesis.tex
@@ -1,4 +1,4 @@
-\chapter*{Hipótesis}
+\section*{Hipótesis}
 \markboth{\MakeUppercase{Hipótesis}}{}
-\addcontentsline{toc}{chapter}{Hipótesis}
+\addcontentsline{toc}{section}{Hipótesis}
 El software desarrollado leerá las señales de un EEG y las graficará. Las gráficas serán en tiempo real, las cuales estarán monitoreando las señales recibidas en una relación frecuencia-tiempo (como lo hace un Osciloscopio electrónico). Además se podrán obtener dichos datos en valores numéricos para que así el software pueda comunicarse con otras herramientas.
