--- a/doc/tesis/text/Introduccion.tex
+++ b/doc/tesis/text/Introduccion.tex
@@ -2,12 +2,4 @@
 \markboth{\MakeUppercase{Introducción}}{}
 \addcontentsline{toc}{chapter}{Introducción}
 
-Desde su surgimiento, el hombre ha tenido una capacidad de pensamiento superior a las otras especies, esta capacidad le ha permitido evolucionar a lo que somos actualmente. El pensamiento es la capacidad de realizar actividades como solucionar problemas, razonar, juzgar, categorizar, decidir o inventar\cite{ref1}, algunos investigadores señalan la necesidad de tres ideas básicas para construir una definición general de pensamiento\cite{ref1}:
-\begin{itemize}
-\item ``El pensamiento es cognitivo pero se infiere de la conducta. Ocurre internamente, en la mente o el sistema cognitivo, y debe ser inferido indirectamente''.
-\item ``El pensamiento es un proceso que implica alguna manipulación de, o establece un conjunto de operaciones sobre, el conocimiento en el sistema cognitivo''.
-\item ``El pensamiento es dirigido y tiene como resultado la resolución de problemas, o se dirige hacia una solución''.
-\end{itemize}
-Actualmente existen diferentes formas de leer y analizar como el ser humano piensa, en este trabajo se hablará de  la lectura no invasiva de las ondas electroencefalográficas, que son emitidas constantemente por el cerebro como resultado de la actividad cerebral\cite{ref2}.  Las lecturas no invasivas se realizan por medio de amplificadores, que obtienen la señal a través de electrodos conectados al cuero cabelludo. Estos amplificadores son programas que cuentan con filtros y técnicas de procesamiento para identificar las ondas emitidas\cite{ref2}. Sin embargo se encuentran limitados a las funciones que los creadores de dichos programas determinen.\\ \indent
-Es por esto que la existencia de un software libre y de código abierto es importante, pues permitirá a los desarrolladores hacer un uso más específico de acuerdo a sus necesidades, y además, con la posibilidad de adaptarlo y complementarlo. El presente trabajo plantea la creación de dicho software libre con la finalidad de resolver las limitantes actuales o incluso, complementar los experimentos realizados con los programas que actualmente existen.
-		
+Pendiente...
