--- a/doc/tesis/text/Justificacion.tex
+++ b/doc/tesis/text/Justificacion.tex
@@ -1,6 +1,6 @@
-\chapter*{Justificación}
+\section*{Justificación}
 \markboth{\MakeUppercase{Justificación}}{}
-\addcontentsline{toc}{chapter}{Justificación}
+\addcontentsline{toc}{section}{Justificación}
 
 
 La necesidad de la creación de un software libre para la lectura de las ondas cerebrales surge debido a la escaza variedad de programas dedicados a dicha tarea actualmente, donde es el mismo creador del dispositivo físico el que te proporciona el software, el cual, ya cuenta con funciones y operaciones definidas por el fabricante.
