--- a/doc/tesis/text/Objetivos.tex
+++ b/doc/tesis/text/Objetivos.tex
@@ -1,15 +1,16 @@
-\chapter*{Objetivos}
+\section*{Objetivos}
 \markboth{\MakeUppercase{Objetivos}}{}
-\addcontentsline{toc}{chapter}{Objetivos}
+\addcontentsline{toc}{section}{Objetivos}
 
-\section*{Objetivo General}
+\subsection*{Objetivo General}
 \markboth{\MakeUppercase{Objetivo General}}{}
-\addcontentsline{toc}{section}{Objetivo General}
-Crear un software libre capaz de interpretar las señales de un EEG para que puedan ser usadas por medio de herramientas externas.
+\addcontentsline{toc}{subsection}{Objetivo General}
+%Crear un software libre capaz de interpretar las señales de un EEG para que puedan ser usadas por medio de herramientas externas.
+Crear un software libre capaz de leer y graficar en tiempo real a través de la plataforma ROS las señales enviadas por el Emotiv EPOC, las cuales son interpretadas por un software libre llamado emokit\cite{emokit}.
 
-\section*{Objetivos Particulares}
+\subsection*{Objetivos Particulares}
 \markboth{\MakeUppercase{Objetivos Particulares}}{}
-\addcontentsline{toc}{section}{Objetivos Particulares}
+\addcontentsline{toc}{subsection}{Objetivos Particulares}
 
 \begin{itemize}
 \item Establecer un canal de comunicación entre el software y el EEG.
