--- a/doc/tesis/bib/Bibliografia.bib
+++ b/doc/tesis/bib/Bibliografia.bib
@@ -1,3 +1,9 @@
+@article{emokit,
+  title={Emokit},
+  author={Brocious, Cody and Machulis, Kyle},
+  journal={OpenYou,[Online]. Available: http://www. openyou. org}
+}
+
 @book{ref1,
 	author = {Fernando Gabucio Cerezo},
 	title = {Psicolog\'ia del Pensamiento},
