--- a/doc/tesis/text/Antecedentes.tex
+++ b/doc/tesis/text/Antecedentes.tex
@@ -1,11 +1,15 @@
-\chapter*{Antecedentes}
+\section*{Antecedentes}
 \markboth{\MakeUppercase{Antecedentes}}{}
-\addcontentsline{toc}{chapter}{Antecedentes}
+\addcontentsline{toc}{section}{Antecedentes}
 
+\indent El software desarrollado en este trabajo toma como base al emokit\cite{emokit} el cuál forma parte de OpenYou. El Emokit lee, descifra e interpreta la información enviada por el Emotiv EPOC tales como nivel de batería de la diadema, intensidad de la señal, y las 14 lecturas realizadas por la diadema; este software actualmente solo imprime a nivel terminal dichos datos. \\
+\indent El Emotiv Epoc es...
+
+\begin{comment}
 \indent En Interfaz Cerebro - Computadora para el Control de un Cursor Basado en Ondas Cerebrales\cite{ref2} se plantea una interfaz que permita la comunicación entre el usuario y la computadora, haciendo uso de sus ondas cerebrales, para el control de un cursor en pantalla mediante comandos obtenidos de las lecturas de un amplificador de ondas cerebrales.
 \\ \indent En EPOC-alypse Mind Controlled Car\cite{seniorepoc} plantean la construcción de de un carro de control remoto que es controlado por la mente usando el Emotiv EPOC. El proyecto fue desarrollado utilizando el SDK oficial del Emotiv EPOC.
 \\ \indent En SSVEP based EEG Interface for Google Street View Navigation\cite{raza2012ssvep} analizan los sistemas BCI y su aplicación en el mundo real. También desarrollan  un prototipo interactivo que pueda ser controlado en un ambiente controlado para demostrar el funcionamiento de los sistemas BCI. Para el desarrollo decidieron utilizar el software libre OpenViBE para la adquisición y procesamiento de las señales.
 \\ \indent En ROS: an open-source Robot Operating System\cite{2009ros} se explica el uso de la plataforma ROS para el desarrollo de aplicaciones de robótica. ROS provee una capa de comunicación estructura basada en Peer-to-peer, basado en herramientas, además es multilenguaje, ligero, gratuito y de código abierto.
 \\ \indent En Things that twitter: social networks and the internet of things\cite{kranz2010things} utilizan ROS aplicado en las redes sociales. ROS permite intercambiar información por medio de servicios con mensaje de request y response definidos. La información es intercambiada por una arquitectura publish/suscribe donde los procesos permiten que sus datos estén disponibles para que otros procesos puedan utilizarlos.
-
+\end{comment}
 % DEscribir emokit, describir EPOC relacion con la UV, ROS,  trabajos previos 
