Avances en Antecedentes

--- a/doc/LaTeX/Tesis.tex
+++ b/doc/LaTeX/Tesis.tex
@@ -7,6 +7,8 @@
 \usepackage{fullpage}
 \usepackage{verbatim} 
 %\usepackage{algorithm}
+\usepackage{url}
+%\usepackage{natbib}
 
 %\bibliographystyle{plain}
 \bibliographystyle{ieeetr}
