--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -1,7 +1,33 @@
-@article{emokit,
-  title={Emokit},
-  author={Brocious, Cody and Machulis, Kyle},
-  journal={OpenYou,[Online]. Available: http://www. openyou. org}
+
+@misc{emokit,
+  title = {Emokit},
+  author = {Brocious, Cody and Machulis, Kyle},
+  month = may,
+  year = {2015},
+  howpublished={\url{http://www.openyou.org}}
+}
+
+@misc{Emotiv:Wiki:Online,
+   author = {Varios Autores},
+   title = {Emotiv Systems},
+   month = may,   
+   year = {2015},
+   howpublished={\url{http://en.wikipedia.org/wiki/Emotiv_Systems}}
+}
+
+@misc{G-TEC:Online,
+  author = {Varios Autores},
+  title = {G-TEC biosignal amplifier g.BSamp},
+  month = may,
+  year = {2015},
+  howpublished = {\url{http://www.gtec.at/Products/Hardware-and-Accessories/g.BSamp-Specs-Features}}
+}
+
+@inproceedings{stytsenko2011evaluation,
+  title={Evaluation of consumer EEG device Emotiv EPOC},
+  author={Stytsenko, Kirill and Jablonskis, Evaldas and Prahm, Cosima},
+  booktitle={MEi: CogSci Conference 2011, Ljubljana},
+  year={2011}
 }
 
 @book{ref1,
