--- a/doc/LaTeX/text/Antecedentes.tex
+++ b/doc/LaTeX/text/Antecedentes.tex
@@ -3,7 +3,8 @@
 \addcontentsline{toc}{section}{Antecedentes}
 
 \indent El software desarrollado en este trabajo toma como base al emokit\cite{emokit} el cuál forma parte de OpenYou. El Emokit lee, descifra e interpreta la información enviada por el Emotiv EPOC tales como nivel de batería de la diadema, intensidad de la señal, y las 14 lecturas realizadas por la diadema; este software actualmente solo imprime a nivel terminal dichos datos. \\
-\indent El Emotiv Epoc es...
+\indent El Emotiv Epoc fue creado con el propósito de ser un periférico para juegos en Windows, OS X y Linux\cite{Emotiv:Wiki:Online}, cuenta con 14 electrodos y funciona como dispositivo de entrada. En 2011 Kirill Stytsenko, Evaldas Jablonskis y Cosima Prahm\cite{stytsenko2011evaluation} realizaron un análisis del Emotiv EPOC para la CogSci Conference. Emotiv EPOC es un BCI de bajo costo basado en la tecnología EEG. Cuenta con 14 electrodos montados en una diadema inalámbrica que se coloca sin esfuerzo y se conecta a la computadora. Originalmente fue creada para los juegos de computadora pero la ``research edition'' permite el acceso a los datos para su análisis lo que abre nuevas posibilidades a la ciencia para realizar nuevos experimentos o integrarlo a los ya existentes. En dicho estudio se someten a diferentes pruebas al Emotiv EPOC y al G-TEC\cite{G-TEC:Online}. Al compararlos se obtiene que la información en general es igual, pero la señal es más clara e intensa en el G-TEC. Uno de los desafios encontrados es la creación de software de grabación para ambos dispositivos. \\
+\indent La Universidad Veracruzana adqurió un Emotiv EPOC en 2014 para el laboratorio de robótica donde los alumnos de la Facultad de Ingeniería participan en diferentes proyectos tecnológicos. Este trabajo de tesis contribuye a un proyecto donde se controlará un robot por medio de la mente a través del Emotiv EPOC. Con el proyecto resultante de este trabajo se tendrá una interfaz la cual graficará las señales del Emotiv EPOC además de tener la capacidad de grabar los datos obtenidos cada vez que se ejecute un ``experimento'' obteniendo un archivo Excel.
 
 \begin{comment}
 \indent En Interfaz Cerebro - Computadora para el Control de un Cursor Basado en Ondas Cerebrales\cite{ref2} se plantea una interfaz que permita la comunicación entre el usuario y la computadora, haciendo uso de sus ondas cerebrales, para el control de un cursor en pantalla mediante comandos obtenidos de las lecturas de un amplificador de ondas cerebrales.
