Avances en Hipótesis

--- a/doc/LaTeX/Tesis.tex
+++ b/doc/LaTeX/Tesis.tex
@@ -8,6 +8,8 @@
 \usepackage{verbatim} 
 %\usepackage{algorithm}
 \usepackage{url}
+\usepackage[hidelinks]{hyperref}
+
 %\usepackage{natbib}
 
 %\bibliographystyle{plain}
