--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -23,6 +23,14 @@
   howpublished = {\url{http://www.gtec.at/Products/Hardware-and-Accessories/g.BSamp-Specs-Features}}
 }
 
+@misc{ROS:Wiki:Online,
+  author = {Varios Autores},
+  title = {ROS.org},
+  month = may,
+  year = {2015},
+  howpublished = {\url{http://wiki.ros.org/es}}
+}  
+  
 @inproceedings{stytsenko2011evaluation,
   title={Evaluation of consumer EEG device Emotiv EPOC},
   author={Stytsenko, Kirill and Jablonskis, Evaldas and Prahm, Cosima},
@@ -39,7 +47,7 @@
 	pages = {16--19}
 }
 
-@article{ref2,
+@article{intcerebro,
 	author = {Job Ram\'on de la O Ch\'avez},
 	title = {Interfaz Cerebro -- Computadora para el Control de un Cursor Basado en Ondas Cerebrales},
 	school = {Universidad Aut\'onoma Metropilitana Azcapotzalco},
