--- a/doc/LaTeX/text/Objetivos.tex
+++ b/doc/LaTeX/text/Objetivos.tex
@@ -6,7 +6,7 @@
 \markboth{\MakeUppercase{Objetivo General}}{}
 \addcontentsline{toc}{subsection}{Objetivo General}
 %Crear un software libre capaz de interpretar las señales de un EEG para que puedan ser usadas por medio de herramientas externas.
-Crear un software libre capaz de leer y graficar en tiempo real a través de la plataforma ROS las señales enviadas por el Emotiv EPOC, las cuales son interpretadas por un software libre llamado emokit\cite{emokit}.
+Crear un software libre capaz de leer y graficar en tiempo real a través de la plataforma ROS las señales enviadas por el Emotiv EPOC, las cuales son interpretadas por un software libre llamado Emokit\cite{emokit}.
 
 \subsection*{Objetivos Particulares}
 \markboth{\MakeUppercase{Objetivos Particulares}}{}
