Avance en Antecedentes

--- a/doc/LaTeX/Tesis.tex
+++ b/doc/LaTeX/Tesis.tex
@@ -8,9 +8,9 @@
 \usepackage{verbatim} 
 %\usepackage{algorithm}
 \usepackage{url}
-\usepackage[hidelinks]{hyperref}
-
+%\usepackage[hidelinks]{hyperref}
 %\usepackage{natbib}
+\usepackage{graphicx}  
 
 %\bibliographystyle{plain}
 \bibliographystyle{ieeetr}
