--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -1,3 +1,11 @@
+@book{2012bci,
+  title={Brain-Computer Interface: High-impact Emerging Technology - What You Need to Know: Definitions, Adoptions, Impact, Benefits, Maturity, Vendors},
+  author={Roebuck, K.},
+  isbn={9781743044612},
+  url={https://books.google.com.mx/books?id=PSoQBwAAQBAJ},
+  year={2012},
+  publisher={Emereo Publishing}
+}
 
 @misc{emokit,
   title = {Emokit},
@@ -85,3 +93,19 @@
   pages={1--10},
   year={2010}
 }
+
+@misc{img:invasive-bci,
+  author = {Varios Autores},
+  title = {neurogadget.com},
+  month = may,
+  year = {2015},
+  howpublished = {\url{http://neurogadget.com/2011/04/08/implanted-bci-detects-when-patients-think-of-specific-sounds/1780}}
+}  
+
+@misc{emotiv:Online,
+  author = {Varios Autores},
+  title = {emotiv.com},
+  month = may,
+  year = {2015},
+  howpublished = {\url{https://emotiv.com/}}
+}  
