--- a/doc/LaTeX/text/Diseno.tex
+++ b/doc/LaTeX/text/Diseno.tex
@@ -1,3 +1,8 @@
 \chapter*{Diseño}
 \markboth{\MakeUppercase{Diseño}}{}
 \addcontentsline{toc}{chapter}{Diseño}
+
+\indent La Universidad Veracruzana adqurió un Emotiv EPOC en 2014 para el laboratorio de robótica donde los alumnos de la Facultad de Ingeniería participan en diferentes proyectos tecnológicos. Este trabajo de tesis contribuye a un proyecto donde se controlará un robot por medio de la mente a través del Emotiv EPOC. Con el proyecto resultante de este trabajo se tendrá una interfaz la cual graficará las señales del Emotiv EPOC además de tener la capacidad de grabar los datos obtenidos cada vez que se ejecute un ``experimento'' obteniendo un archivo separado por comas.
+\\ \indent Al momento de la investigación se encontraron algunos software que mostraban la información obtenida de forma gráfica, sin embargo el principal inconveniente de estos era el desfase entre los datos que se estaban obteniendo y su graficación. Para atacar ese problema en este proyecto se utilizó un framework llamado ROS. ROS (Robot Operating System)\cite{ROS:Wiki:Online} provee librerías y herramientas para ayudar a los desarrolladores de software a crear aplicaciones para robots. ROS provee abstracción de hardware, controladores de dispositivos, librerías, herramientas de visualización, comunicación por mensajes, administración de paquetes y más. ROS está bajo la licencia open source, BSD. En este proyecto se utilizó ROS para crear un escenario de comunicación en tiempo real, donde el Emokit\cite{emokit} publica a través de mensajes los datos obtenidos del Epoc así mismo el nuevo software leerá los mensajes publicados en ROS para obtener los datos para graficarlos y generar el ``log'', todo esto ya en tiempo real.
+% DEscribir emokit, describir EPOC relacion con la UV, ROS,  trabajos previos 
+%\begin{comment}
