--- a/doc/LaTeX/text/Desarrollo.tex
+++ b/doc/LaTeX/text/Desarrollo.tex
@@ -1,3 +1,3 @@
-\chapter*{Desarrollo}
-\markboth{\MakeUppercase{Desarrollo}}{}
-\addcontentsline{toc}{chapter}{Desarrollo}
+\chapter*{Implementación y Resultados}
+\markboth{\MakeUppercase{Implementación y Resultados}}{}
+\addcontentsline{toc}{chapter}{Implementación y Resultados}
