--- a/doc/LaTeX/text/Antecedentes.tex
+++ b/doc/LaTeX/text/Antecedentes.tex
@@ -2,7 +2,7 @@
 \markboth{\MakeUppercase{Antecedentes}}{}
 \addcontentsline{toc}{section}{Antecedentes}
 
-\indent El software desarrollado en este trabajo toma como base al emokit\cite{emokit} el cuál forma parte de OpenYou\cite{emokit}. El Emokit es una Interfaz Cerebro-Máquina (BCI) que lee, descifra e interpreta la información enviada por el Emotiv EPOC tales como nivel de batería de la diadema, intensidad de la señal, y las 14 lecturas realizadas por la diadema; este software actualmente solo imprime a nivel terminal dichos datos.
+\indent El software desarrollado en este trabajo toma como base al emokit\cite{emokit} el cuál forma parte de OpenYou\cite{emokit}. El Emokit lee, descifra e interpreta la información enviada por el Emotiv EPOC, el cual es un dispositivo ``Interfaz Cerebro-Máquina'' (BCI), tales como nivel de batería de la diadema, intensidad de la señal, y las 14 lecturas realizadas por la diadema; este software actualmente solo imprime a nivel terminal dichos datos.
 \\ \indent Una ``Interfaz Cerebro-Máquina''\cite{2012bci} (BCI) es un medio de comunicación directo entre el cerebro y un dispositivo externo. Los BCI están normalmente dirigidos a asistir, aumentar y reparar la habilidad cognitiva y las funciones sensoriomotoras.
 \\ \indent Las inventigaciones con los BCI comenzaron en 1970 en la Universidad de Los Ángeles California(UCLA) bajo el subsidio de Fundación Nacional de Ciencia contratados por la Agencia de Proyectos de Investigación Avanzados de Defensa (DARPA). La publicación hecha después de la investigación marcó la primera aparición de la expresión ``Interfaz Cerebro-Máquina'' en la literatura científica. En la actualidad existen tres tipos de BCI:
 \begin{itemize}
@@ -23,7 +23,7 @@
 \end{figure}
 
 \end{itemize}
-\indent El Emotiv Epoc fue creado con el propósito de ser un periférico para juegos en Windows, OS X y Linux\cite{Emotiv:Wiki:Online}, cuenta con 14 electrodos y funciona como dispositivo de entrada. En 2011 Kirill Stytsenko, et al.\cite{stytsenko2011evaluation} realizaron un análisis del Emotiv EPOC para la CogSci Conference. Emotiv EPOC es un BCI de bajo costo basado en la tecnología EEG. Cuenta con 14 electrodos montados en una diadema inalámbrica que se coloca sin esfuerzo y se conecta a la computadora. Originalmente fue creada para los juegos de computadora pero la ``research edition'' permite el acceso a los datos para su análisis lo que abre nuevas posibilidades a la ciencia para realizar nuevos experimentos o integrarlo a los ya existentes. En dicho estudio se someten a diferentes pruebas al Emotiv EPOC y al G-TEC\cite{G-TEC:Online}. Al compararlos se obtiene que la información en general es igual, pero la señal es más clara e intensa en el G-TEC. Uno de los desafíos encontrados es la creación de software de grabación para ambos dispositivos.
+\indent El Emotiv Epoc es BCI que fue creado con el propósito de ser un periférico para juegos en Windows, OS X y Linux\cite{Emotiv:Wiki:Online}, cuenta con 14 electrodos y funciona como dispositivo de entrada. En 2011 Kirill Stytsenko, et al.\cite{stytsenko2011evaluation} realizaron un análisis del Emotiv EPOC para la CogSci Conference. Emotiv EPOC es un BCI de bajo costo basado en la tecnología EEG. Cuenta con 14 electrodos montados en una diadema inalámbrica que se coloca sin esfuerzo y se conecta a la computadora. Originalmente fue creada para los juegos de computadora pero la ``research edition'' permite el acceso a los datos para su análisis lo que abre nuevas posibilidades a la ciencia para realizar nuevos experimentos o integrarlo a los ya existentes. En dicho estudio se someten a diferentes pruebas al Emotiv EPOC y al G-TEC\cite{G-TEC:Online}. Al compararlos se obtiene que la información en general es igual, pero la señal es más clara e intensa en el G-TEC. Uno de los desafíos encontrados es la creación de software de grabación para ambos dispositivos.
 \\ \indent Job Ramón de la O Chávez en su tesis Interfaz Cerebro - Computadora para el Control de un Cursor Basado en Ondas\cite{intcerebro} plantea una interfaz que permita la comunicación entre el usuario y la computadora, haciendo uso de sus ondas cerebrales, para el control de un cursor en pantalla mediante comandos obtenidos de las lecturas de un amplificador de ondas cerebrales.
 \\ \indent En EPOC-alypse Mind Controlled Car\cite{seniorepoc} plantean la construcción de de un carro de control remoto que es controlado por la mente usando el Emotiv EPOC. El proyecto fue desarrollado utilizando el SDK oficial del Emotiv EPOC.
 \\ \indent Asim Raza en SSVEP based EEG Interface for Google Street View Navigation\cite{raza2012ssvep} analiza los sistemas BCI y su aplicación en el mundo real. También desarrolla un prototipo interactivo que pueda ser controlado en un ambiente controlado para demostrar el funcionamiento de los sistemas BCI. Para el desarrollo decidió utilizar el software libre OpenViBE para la adquisición y procesamiento de las señales.
