Avances en Diseño

--- a/doc/LaTeX/text/Antecedentes.tex
+++ b/doc/LaTeX/text/Antecedentes.tex
@@ -10,6 +10,7 @@
 \begin{figure}[htb]
 \centering
 \includegraphics[width=0.4\textwidth]{img/bci1.jpg}
+%\includegraphics[scale=1,bb=0 0 30 30]{img/bci1.jpg}
 \caption{BCI invasivo\cite{img:invasive-bci}} \label{fig:bci1}
 \end{figure}
 
@@ -19,6 +20,7 @@
 \begin{figure}[htb]
 \centering
 \includegraphics[width=0.8\textwidth]{img/epoc.png}
+%\includegraphics[scale=1,bb=0 0 30 30]{img/epoc.png}
 \caption{BCI no invasivo\cite{emotiv:Online}} \label{fig:bci2}
 \end{figure}
 
