--- a/doc/LaTeX/Tesis.tex
+++ b/doc/LaTeX/Tesis.tex
@@ -8,7 +8,7 @@
 \usepackage{verbatim} 
 %\usepackage{algorithm}
 \usepackage{url}
-%\usepackage[hidelinks]{hyperref}
+\usepackage[hidelinks]{hyperref}
 %\usepackage{natbib}
 \usepackage{graphicx}  
 
