--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -109,3 +109,14 @@
   year = {2015},
   howpublished = {\url{https://emotiv.com/}}
 }  
+
+@article{sanner1999python,
+  title={Python: a programming language for software integration and development},
+  author={Sanner, Michel F and others},
+  journal={J Mol Graph Model},
+  volume={17},
+  number={1},
+  pages={57--61},
+  year={1999},
+  publisher={Citeseer}
+}
