--- a/doc/LaTeX/text/Desarrollo.tex
+++ b/doc/LaTeX/text/Desarrollo.tex
@@ -1,3 +1,8 @@
 \chapter*{Implementación y Resultados}
 \markboth{\MakeUppercase{Implementación y Resultados}}{}
 \addcontentsline{toc}{chapter}{Implementación y Resultados}
+
+Pruebas
+Capturas y fotos de la aplicacion funcionando e interactuando con la diadema
+Códigos y su desarrollo
+Versiones
