--- a/doc/LaTeX/text/Diseno.tex
+++ b/doc/LaTeX/text/Diseno.tex
@@ -4,6 +4,17 @@
 
 \indent La Universidad Veracruzana adqurió un Emotiv EPOC en 2014 para el laboratorio de robótica donde los alumnos de la Facultad de Ingeniería participan en diferentes proyectos tecnológicos. Este trabajo de tesis contribuye a un proyecto donde se controlará un robot por medio de la mente a través del Emotiv EPOC. Con el proyecto resultante de este trabajo se tendrá una interfaz la cual graficará las señales del Emotiv EPOC además de tener la capacidad de grabar los datos obtenidos cada vez que se ejecute un ``experimento'' obteniendo un archivo separado por comas.
 \\ \indent Al momento de la investigación se encontraron algunos software que mostraban la información obtenida de forma gráfica, sin embargo el principal inconveniente de estos era el desfase entre los datos que se estaban obteniendo y su graficación. Para atacar ese problema en este proyecto se utilizó un framework llamado ROS. ROS (Robot Operating System)\cite{ROS:Wiki:Online} provee librerías y herramientas para ayudar a los desarrolladores de software a crear aplicaciones para robots. ROS provee abstracción de hardware, controladores de dispositivos, librerías, herramientas de visualización, comunicación por mensajes, administración de paquetes y más. ROS está bajo la licencia open source, BSD. En este proyecto se utilizó ROS para crear un escenario de comunicación en tiempo real, donde el Emokit\cite{emokit} publica a través de mensajes los datos obtenidos del Epoc así mismo el nuevo software leerá los mensajes publicados en ROS para obtener los datos para graficarlos y generar el ``log'', todo esto ya en tiempo real.
+\\ \indent Además de ROS el nuevo software se desarrolló en Python, utilizando las librerias PyQt y matplotlib. Python es un lenguaje de programación interpretado, interactivo y orientado a objetos que provee estructuras de datos de alto nivel como listas y diccionarios, módulos, clases, excepciones, manejo automático de memoria, etc. Además es un lenguaje poderoso y multi propósito que cuenta con una sintaxis simple y elegante\cite{sanner1999python}. Para la creación de la interfaz se decidió utlizar el framework QT integrado a Python mediante PyQt. PyQt un binding\footnote{Adaptación de una biblioteca para ser usada en un lenguaje de programación distinto de aquél en el que ha sido escrita.} de QT para Python v2 y v3 que puede ser ejecutado en todas las plataformas soportadas por QT incluyendo Windows, MacOS/X y Linux. Está implementada por medio de módulos de Python contenidos en más de 620 clases. Finalmente la graficación se llevó a cabo con matplotlib. matplotlib es una libreria de Python para graficación 2D que produce figuras de calidad en una variedad de formatos y entornos interactivos a través de distintas plataformas. matplotlib puede ser usado en scripts de Python, MATLAB, Mathematica, servidores de aplicaciones web y en herramientas de interfaz gráfica de usuario.
+\\ \indent El criterio para seleccionar los lenguajes, frameworks y bibliotecas mencionados fue el de la filosofía del software libre, siendo las tecnologías seleccionadas libres y además multiplataforma\footnote{Windows no es soportado por ROS a la fecha de la publicación, ver http://wiki.ros.org/ROS/Installation}. La aplicación resultante por lo tanto es libre y multiplataforma.
+Explicacion de la interfaz
+Explicacion de las gráficas
+Explicacion del log
+Panorama general del funcionamiento
+ROS, talker -> msg -> listener
+Adaptación de ROS al emokit -> software no dependiente de emokit.
+
+
+\begin{comment}
 \\ \indent Para la construcción del software presentado en este trabajo se utilizó:
 \begin{itemize}
 \item Python\footnote{ Lenguaje de programación que puede ser usado para diferentes propósitos como aplicaciones web, aplicaciones de escritorio, intérprete, etc}
@@ -11,3 +22,4 @@
 \item Matplotlib\footnote{ Biblioteca para la generación de gráficos a partir de datos contenidos en listas o arrays en el lenguaje de programación Python y su extensión matemática NumPy}
 \item ROS
 \end{itemize}
+\end{comment}
