--- a/doc/LaTeX/text/Conclusiones.tex
+++ b/doc/LaTeX/text/Conclusiones.tex
@@ -4,8 +4,8 @@
 
 Se logró crear un software el cual es capaz de leer mensaje publicados en ROS para generar las graficas y el registro. La principal ventaja es que al ser en ROS su funcionamiento en base a mensajes esto permite que sea usado en cualquier escenario que publique el mismo tipo de mensaje que el software lee y no se encuentra limitado a funcionar unicamente con el emokit o incluso para el Emotiv Epoc.
 
-\subsection*{Trabajo Futuro}
+\section*{Trabajo Futuro}
 \markboth{\MakeUppercase{Trabajo Futuro}}{}
-\addcontentsline{toc}{subsection}{Trabajo Futuro}
+\addcontentsline{toc}{section}{Trabajo Futuro}
 
 Al ser libre, es software en este poryecto puede ser mejorado de muchas formas y para distintos propósitos. 
