Avances en Implementación e Introducción

--- a/doc/LaTeX/text/Antecedentes.tex
+++ b/doc/LaTeX/text/Antecedentes.tex
@@ -39,4 +39,11 @@
 \end{itemize}
 %ROS provee una capa de comunicación estructura basada en Peer-to-peer, basado en herramientas, además es multilenguaje, ligero, gratuito y de código abierto.
 \indent En Things that twitter: social networks and the internet of things\cite{kranz2010things} utilizan ROS aplicado en las redes sociales. ROS permite intercambiar información por medio de servicios con mensaje de request y response definidos. La información es intercambiada por una arquitectura publish/suscribe donde los procesos permiten que sus datos estén disponibles para que otros procesos puedan utilizarlos.
-%\end{comment}
+
+% Trabajos sobre cda tipo de BCI, enfatizar no invasivo.
+% LIrbos, publicaciones etc que hablen sobre ellos.
+% aplicacion en los videojuegos
+% Avance de las compañias en el tema de los BCI
+% Quienes han investigado sobre BCI
+% Paises avanzados en el campo
+% Campos con los que se relaciona
