Avance en Antecedentes

--- a/doc/LaTeX/Tesis.tex
+++ b/doc/LaTeX/Tesis.tex
@@ -8,7 +8,8 @@
 \usepackage{verbatim}
 %\usepackage{algorithm}
 \usepackage{url}
-\usepackage[hidelinks]{hyperref}
+%\usepackage[hidelinks]{hyperref}
+\usepackage{hyperref} \hypersetup{ colorlinks=false, pdfborder={0 0 0} }
 %\usepackage{natbib}
 \usepackage{graphicx} 
 \usepackage{listingsutf8}
