--- a/doc/LaTeX/bib/Bibliografia.bib
+++ b/doc/LaTeX/bib/Bibliografia.bib
@@ -120,3 +120,24 @@
   year={1999},
   publisher={Citeseer}
 }
+
+
+@article{invasiveBCI2,
+  title={Methods Towards Invasive Human Brian Computer Interfaces},
+  author={Lal, Thomas Navin and Hinterberger, Thilo and Widman, Guido and Schr{\"o}der, Michael and Hill, Jeremy and Rosenstiel, Wolfgang and Elger, Christian and Sch{\"o}lkopf, Bernhard and Birbaumer, Niels},
+  year={2005}
+}
+
+@article{invasiveBCI1,
+  title={Brain Computer Interface and its Types - A Study},
+  author={Anupama. H. S, Cauvery. N. K, G. M. Lingaraju},
+  year={2012}
+} 
+
+@misc{SCP:Online,
+  author = {Varios Autores},
+  title = {Biofeedback Federation of Europe},
+  month = may,
+  year = {2015},
+  howpublished = {\url{https://biofeedbackfederationofeurope.blogspot.mx/2014/04/introduction-to-slow-cortical.html}}
+}  
