--- a/doc/LaTeX/text/Implementacion.tex
+++ b/doc/LaTeX/text/Implementacion.tex
@@ -7,12 +7,12 @@ La impelmentacion es una explicacion del software funcionado e imagenes de esllo
 \\ \indent A continuación se presentan los códigos con los que fue posible este proyecto, el proyecto completo puede ser descargado en \url{http://github.com/carlosbulnes/epoc/}.
 
 Primero tenemos al código del emokit adaptado a ROS.
-\lstinputlisting[language=Python, caption=emokit.py]{code/emokit.py}
+%\lstinputlisting[language=Python, caption=emokit.py]{code/emokit.py}
 
 El código del software realizado en este trabajo es el siguiente. Este está constituido por un programa principal llamado interfaz.py el cuál depende de los códigos GUI.py que es la definición de la interfaz en PyQT y matplotlibwidgetFile.py que permite la integración de matplotlib a PyQt.
 \\ 
-\lstinputlisting[language=Python, caption=interfaz.py]{code/interfaz.py}
-\lstinputlisting[language=Python, caption=GUI.py]{code/GUI.py}
-\lstinputlisting[language=Python, caption=matplotlibwidgetFile.py]{code/matplotlibwidgetFile.py}
+%\lstinputlisting[language=Python, caption=interfaz.py]{code/interfaz.py}
+%\lstinputlisting[language=Python, caption=GUI.py]{code/GUI.py}
+%\lstinputlisting[language=Python, caption=matplotlibwidgetFile.py]{code/matplotlibwidgetFile.py}
 %Códigos y su desarrollo
 %Versiones
